--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@stripe/react-stripe-js": "^4.0.2",
     "@stripe/stripe-js": "^7.9.0",
+    "@vercel/speed-insights": "^1.2.0",
     "framer-motion": "^10.16.4",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
